crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__return_no_value.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      Return:
        value: ~
        span:
          start: 0
          end: 7
          file: "<input>"
