crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__return_statement.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      Return:
        value:
          Literal:
            - Number: 42
            - start: 7
              end: 9
        span:
          start: 0
          end: 10
