crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__while_loop.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      While:
        cond:
          Literal:
            - Bool: true
            - start: 7
              end: 11
        body:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: x
                    span:
                      start: 15
                      end: 16
                span:
                  start: 15
                  end: 17
          tail_expr: ~
          span:
            start: 13
            end: 19
        span:
          start: 0
          end: 19
