crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_control_flow__while_loop_no_parens.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_control_flow.rs
expression: program
---
items:
  - Statement:
      While:
        cond:
          Literal:
            - Bool: true
            - start: 6
              end: 10
              file: "<input>"
        body:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: x
                    span:
                      start: 13
                      end: 14
                      file: "<input>"
                span:
                  start: 13
                  end: 15
                  file: "<input>"
          tail_expr: ~
          span:
            start: 11
            end: 17
            file: "<input>"
        span:
          start: 0
          end: 17
          file: "<input>"
